tests/security/ImplodeExplode/output.txt
ERROR: TaintedData - input.hack:4:6 - Detected tainted HTML tags